[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesploit"
version = "1.0.0"
description = "Bluetooth Exploitation Framework for Security Researchers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "v33ru", email = "v33ru@iotsrg.org"}
]
maintainers = [
    {name = "v33ru", email = "v33ru@iotsrg.org"}
]
requires-python = ">=3.8"
keywords = [
    "bluetooth", "ble", "security", "exploitation", "pentest",
    "iot", "iot-security", "wireless", "hacking"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
classic = ["pybluez>=0.23"]
full = [
    "pybluez>=0.23",
    "scapy>=2.5.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
bluesploit = "bluesploit:main"
bsploit = "bluesploit:main"

[project.urls]
Homepage = "https://github.com/v33ru/bluesploit"
Documentation = "https://github.com/v33ru/bluesploit/wiki"
Repository = "https://github.com/v33ru/bluesploit"
Issues = "https://github.com/v33ru/bluesploit/issues"

[tool.setuptools]
packages = ["bluesploit", "bluesploit.core", "bluesploit.core.utils", "bluesploit.modules"]
include-package-data = true

[tool.setuptools.package-data]
bluesploit = ["data/**/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
